# target-salesforce-marketing

./: LICENSE  README.md  meltano.yml  pyproject.toml
target_salesforce_marketing/: __init__.py  auth.py  client.py  lambda.py  sinks.py  target.py
tests/: __init__.py  test_core.py
